# godot-orchestrator

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakePresets.json_old  DONORS.md  LICENSE  README.md  VERSION  playbook.yml  playbook_en.yml  playbook_ru.yml  project.godot  release_manifests.json  riscv64-toolchain.cmake
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_rquest.yml
.github/actions/android-deps/: action.yml
.github/actions/base-deps/: action.yml
.github/actions/linux-deps/: action.yml
.github/workflows/: android_builds.yml  artifact_builds.yml  build.yml  cache_warmer.yml  change-log.yml  discourse-issues.yml  ios_builds.yml  linux_builds.yml  macos_builds.yml  publish-documentation.yml  runner.yml  security-scan.yml  static_checks.yml  web_builds.yml  windows_builds.yml
addons/orchestrator/: AUTHORS.txt  LICENSE.txt  README  README.md  orchestrator.gd  orchestrator_node_factory.gd  orchestrator_settings.gd  orchestrator_version.gd  plugin.cfg  plugin.gd
addons/orchestrator/test/: test.gd  (+1 more)
cmake/: authors.h.in  clang-format.cmake  cmake-utils.cmake  donors.h.in  extension_db.cpp.in  extension_db.h.in  generate-authors.cmake  generate-donors.cmake  generate-license.cmake  generate-script-templates.cmake  generate-version.cmake  generate_godot_docs.py  generate_godot_extension_db.py  godot-dev-configuration.cmake  godot-docs-generator.cmake  godot-extension-db-generator.cmake  license.h.in  markdown-utils.cmake  version.h.in  windows.rc.in
cmake/scripts/: generate_godot_api.py  generate_godot_docs.py  generate_godot_extension_db.py  generate_script_templates.py
cmake/templates/: authors.h.in  donors.h.in  extension_db.cpp.in  license.h.in  version.h.in  windows.rc.in
doc_classes/: @OScript.xml  OScript.xml  OScriptEditablePinNode.xml  OScriptFunction.xml  OScriptGraph.xml  OScriptNode.xml  OScriptNodeArrayAddElement.xml  OScriptNodeArrayAppend.xml  OScriptNodeArrayClear.xml  OScriptNodeArrayFind.xml  OScriptNodeArrayGet.xml  OScriptNodeArrayRemoveElement.xml  OScriptNodeArrayRemoveIndex.xml  OScriptNodeArraySet.xml  OScriptNodeAssignLocalVariable.xml  OScriptNodeAutoload.xml  OScriptNodeAwait.xml  OScriptNodeAwaitCoroutine.xml  OScriptNodeAwaitSignal.xml  OScriptNodeBranch.xml  OScriptNodeCallBuiltinFunction.xml  OScriptNodeCallFunction.xml  OScriptNodeCallMemberFunction.xml  OScriptNodeCallScriptFunction.xml  OScriptNodeCallStaticFunction.xml  OScriptNodeChance.xml  OScriptNodeClassConstant.xml  OScriptNodeClassConstantBase.xml  OScriptNodeCoercion.xml  OScriptNodeComment.xml  OScriptNodeCompose.xml  OScriptNodeComposeFrom.xml  OScriptNodeConstant.xml  OScriptNodeDecompose.xml  OScriptNodeDelay.xml  OScriptNodeDialogueChoice.xml  OScriptNodeDialogueMessage.xml  OScriptNodeDictionarySet.xml  OScriptNodeEmitMemberSignal.xml  OScriptNodeEmitSignal.xml  (+46 more)
docs/: antora.yml
docs/en/: antora.yml
docs/ru/: antora.yml
project/: project.godot
src/api/: extension_db.cpp  extension_db.h  extension_interface.cpp  extension_interface.h
src/common/: callable_lambda.h  classdb_utils.cpp  classdb_utils.h  dictionary_utils.cpp  dictionary_utils.h  error_list.cpp  error_list.h  file_utils.cpp  file_utils.h  godot_utils.cpp  godot_utils.h  godot_version.h  guid.cpp  guid.h  logger.cpp  logger.h  macros.h  memory_utils.cpp  memory_utils.h  method_utils.cpp  method_utils.h  name_utils.cpp  name_utils.h  os_utils.cpp  os_utils.h  property_utils.cpp  property_utils.h  resource_utils.cpp  resource_utils.h  scene_utils.cpp  scene_utils.h  settings.cpp  settings.h  string_utils.cpp  string_utils.h  tree_utils.cpp  tree_utils.h  variant_operators.cpp  variant_operators.h  variant_utils.cpp  (+4 more)
src/core/: register_core_types.cpp  register_core_types.h  typedefs.h
src/editor/: about_dialog.cpp  about_dialog.h  autowire_connection_dialog.cpp  autowire_connection_dialog.h  build_output_panel.cpp  build_output_panel.h  connections_dock.cpp  connections_dock.h  context_menu.cpp  context_menu.h  dialogs_helper.cpp  dialogs_helper.h  editor.cpp  editor.h  editor_cache.cpp  editor_cache.h  editor_component_view.cpp  editor_component_view.h  editor_log_event_router.cpp  editor_panel.cpp  editor_panel.h  editor_view.cpp  editor_view.h  editor_viewport.cpp  editor_viewport.h  file_dialog.cpp  file_dialog.h  getting_started.cpp  getting_started.h  goto_node_dialog.cpp  goto_node_dialog.h  main_view.cpp  main_view.h  property_selector.cpp  property_selector.h  register_editor_types.cpp  register_editor_types.h  scene_node_selector.cpp  scene_node_selector.h  script_components_container.cpp  (+18 more)
src/orchestration/: action.cpp  action.h  build_log.cpp  build_log.h  connection.cpp  connection.h  function.cpp  function.h  graph.cpp  graph.h  node.cpp  node.h  node_factory.cpp  node_factory.h  node_pin.cpp  node_pin.h  nodes.cpp  nodes.h  orchestration.cpp  orchestration.h  orchestration_utils.cpp  orchestration_utils.h  register_orchestration_types.cpp  register_orchestration_types.h  signals.cpp  signals.h  target_object.cpp  target_object.h  variable.cpp  variable.h
src/plugin/: inspector_plugin_variable.cpp  plugin.cpp  plugin.h  settings.cpp  settings.h  theme_cache.cpp
src/script/: action.cpp  action.h  connection.cpp  connection.h  function.cpp  function.h  graph.cpp  graph.h  language.cpp  language.h  node.cpp  node.h  node_factory.cpp  node_factory.h  node_pin.cpp  node_pin.h  register_script_types.cpp  register_script_types.h  script.cpp  script.h  script_cache.cpp  script_cache.h  script_docdata.cpp  script_docdata.h  script_docgen.cpp  script_docgen.h  script_instance.cpp  script_instance.h  script_native_class.cpp  script_native_class.h  script_rpc_callable.cpp  script_rpc_callable.h  script_server.cpp  script_server.h  script_source.cpp  script_source.h  script_template_registry.cpp  script_template_registry.h  script_utility_callable.cpp  script_utility_callable.h  (+11 more)
tests/: project.godot  run_integration_tests.py
tests/.godot/: extension_list.cfg
(+990 files in other folders)
